@@ -5,7 +5,7 @@ use warnings;
 use 5.010_001;
 use Teng::Schema::Declare;
 
-use version; our $VERSION = 'v0.3.2';
+use version; our $VERSION = 'v0.4.0';
 
 table {
     name    'semaphores';
