@@ -13,7 +13,7 @@ use Smart::Args;
 
 use App::Koyomi::Semaphore;
 
-use version; our $VERSION = 'v0.3.2';
+use version; our $VERSION = 'v0.4.0';
 
 our @JOB_FIELDS  = qw/id user command memo created_on updated_at/;
 our @TIME_FIELDS = qw/id job_id year month day hour minute weekday created_on updated_at/;
